<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_notification"
            android:title="@string/nav_notification"
            android:icon="@drawable/ic_notifications"/>

        <item android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_history"/>

        <item android:id="@+id/nav_Report"
            android:title="@string/nav_report"
            android:icon="@drawable/ic_report"/>

        <item android:id="@+id/nav_post"
            android:title="@string/nav_post"
            android:icon="@drawable/ic_post1"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_myprofile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_myprofile"/>

            <item android:id="@+id/nav_change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_lock"/>
        </menu>
    </item>
</menu>